<resources>
    <string name="app_name">PLMS project</string>
    <string name="action_settings">Quit</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="parking_lot_a">Parking</string>

    <string name="maps">Maps</string>

    <string name="parking_lot_management_system">Parking Lot Management System</string>

    <string name="parking_info">Parking Info</string>

    <string name="info">Info</string>

    <string name="name">Name</string>

    <string name="number_of_parking_spots_available">Number Of Parking Spots Available</string>

    <string name="message">Message</string>

    <string name="submit">Submit</string>

    <string name="quit">Quit</string>

    <string name="data_unavailable">No Data is available on the Database</string>
    <string name="availability">Availability</string>

    <string name="timestamp">Timestamp</string>
</resources>
